objects/copado__Test_Suite_Script__c.object
<CustomObject>
    <fields>
        <fullName>copado__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Test_Script__c</fullName>
        <label>Test Script</label>
        <referenceTo>copado__Test_Script__c</referenceTo>
        <relationshipLabel>Test Suite Scripts</relationshipLabel>
        <relationshipName>Test_Suite_Scripts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Test__c</fullName>
        <label>Test</label>
        <referenceTo>copado__Test__c</referenceTo>
        <relationshipLabel>Test Suite Scripts</relationshipLabel>
        <relationshipName>Test_Suite_Scripts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>